--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,11 +29,31 @@
     "SharedArrayBuffer": "readonly"
   },
   "parserOptions": {
-    "ecmaVersion": 2018,
-    "project": [
-      "./tsconfig.eslint.json"
-    ]
+    "ecmaVersion": 2018
   },
+  "overrides": [
+    {
+      "files": ["*.js"],
+      "rules": {
+        "@typescript-eslint/no-floating-promises": "off",
+        "@typescript-eslint/no-var-requires": "off"
+      }
+    },
+    {
+      "files": ["*.ts", "*.tsx"],
+      "parser": "@typescript-eslint/parser",
+      "parserOptions": {
+        "ecmaVersion": 2018,
+        "project": [
+          "./tsconfig.eslint.json"
+        ]
+      },
+      "rules": {
+        "@typescript-eslint/no-floating-promises": ["error"],
+        "@typescript-eslint/no-var-requires": 0
+      }
+    }
+  ],
   "rules": {
     "func-style": [
       "error",
@@ -51,10 +71,6 @@
     "require-await":["error"],
     "global-require": 0,
     "no-void": 0,
-    "@typescript-eslint/no-floating-promises": [
-      "error"
-    ],
-    "@typescript-eslint/no-var-requires": 0,
     "class-methods-use-this": 0,
     "no-case-declarations": 0,
     "camelcase": 0,
@@ -70,7 +86,9 @@
     "max-len": [
       "error",
       {
-        "code": 120
+        "code": 120,
+        "ignoreStrings": true,
+        "ignoreTemplateLiterals": true
       }
     ],
     "import/extensions": [
